# motion

./: pyproject.toml
backend/applications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/applications/migrations/: 0001_initial.py
main/: settings.py  urls.py
